2017-06-17	Daniel Hawkins
	* server/attack.c: Update display for pk to only show when player kills a
	  player other than self.

2017-05-31	Rick Tanner
	* lib/help/nextkey.en: New help file for nextkey command
	* lib/help/prevkey.en: New help file for prevkey command

2017-05-20	Kevin Zheng
	* socket/sounds.c: Play region music if a map doesn't have music

2017-02-18	Daniel Hawkins
	* server/monster.c: Prevent monster_compute_path from being called for
	  confused monsters.

2016-06-03  Daniel Hawkins
	* common/map.c: Only check for null tile map if we tried to load;
	  if we didn't try to load, tile map was already non-null.

2016-05-23  Daniel Hawkins
	* common/map.c: Prevent a potential segfault in get_map_from_coord() and
	  out_of_map() if load_and_link_tiled_map() returns a null map. It was
	  used before it was verified in previous behavior. Updated the documentation
	  for each function to state the initial map passed to it must not be NULL.

2016-05-22  Daniel Hawkins
	* server/server.c: Move the static string reference into the condition
	  branch, since we only use it on that branch.

2016-05-21  Daniel Hawkins
	* common/los.c: Refactored set_wall() to recycle a couple variables to
	  reduce recursion overhead.
	* plugins/cfanim/cfanim.c: Refactored get_boolean() to not use strncmp(),
	  since it was only checking the first character anyway.
	* common/player.c: Changed a malloc() with a memset() to 0 into a calloc().
	* lib/attackmess: Change 'acrobaticly' to 'acrobatically'.

2016-05-18  Daniel Hawkins
	* common/map.c: Add new maps to the front of the mapstruct linked list
	  since there does not appear to be any order preference in the rest of
	  the codebase.
	  Remove a redundant memset to 0 after a calloc(). Also check for null
	  to prevent potential segfaults.
	  Optimize out newx and newy in get_map_flags(). x and y are already copies.
	  Optimize out check_dir in compute_monster_path().