@@ -1,3 +1,6 @@
+2017-07-24	Kevin Zheng
+	* server/attack.c: Play attack sounds on the map
+
 2017-06-17	Daniel Hawkins
 	* server/attack.c: Update display for pk to only show when player kills a
 	  player other than self.
